# enhance-with-ai-app

./: .gitignore  README.md  enhance-with-ai.py  pyproject.toml
enhance_with_ai/: app.py  config.py  openai_client.py  secrets.py  window.py
snap/: snapcraft.yaml
snap/local/: enhance-with-ai.desktop
